--- a/styles/reset.css
+++ b/styles/reset.css
@@ -1,12 +1,12 @@
 :root {
-    font-size: 62.5%;
-    scroll-behavior: smooth;
+  font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body,
@@ -14,32 +14,32 @@ button,
 input,
 select,
 textarea {
-    font-size: 1.6rem;
-    font-family: "Press Start 2P";
-    color: #eee; 
-    border: none;
-    background: none;
-    text-shadow: 1px 1px 1px #000;
+  font-size: 1.6rem;
+  font-family: "Press Start 2P";
+  color: #eee;
+  border: none;
+  background: none;
+  text-shadow: 1px 1px 1px #000;
 }
 
 body {
-    background: url(../images/wallpaper-animes.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+  background: url(../images/wallpaper-animes-1.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .container {
-    height: 100vh;
-    background: #000b;
-    padding: 0 3.2rem;
+  height: 100vh;
+  background: #000c;
+  padding: 0 3.2rem;
 }
 
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
