--- a/styles/cards.css
+++ b/styles/cards.css
@@ -79,12 +79,23 @@ aside button {
 
 @media (min-width: 768px) {
     main {
-        min-width: 92rem;
+        min-width: 100rem;
     }
 
     .gridCards {
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns: repeat(8, 1fr);
         gap: 1.6rem;
         margin-top: 2.4rem;
+        transform-style: preserve-3d;
     }
+}
+
+.card:hover {
+    cursor: pointer;
+    transform: rotateY(180deg);
+
+}
+
+.flipCard {
+    transform: rotateY(180deg);
 }
