--- a/styles/cards.css
+++ b/styles/cards.css
@@ -62,7 +62,7 @@ aside button {
 .card div img {
     width: 100%;
     height: 100%;
-    object-fit: fill;
+    object-fit: cover;
     border: solid 1.5px orange;
     border-radius: 0.6rem;
     transition: filter 300ms, opacity 300ms;
@@ -92,8 +92,6 @@ aside button {
 
 .card:hover {
     cursor: pointer;
-    transform: rotateY(180deg);
-
 }
 
 .flipCard {
